<resources>
    <string name="app_name">Assignment6</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="license">DriversLicense</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnPreview">Preview</string>
    <string name="title_activity_preview_input">PreviewInputActivity</string>
    <string name="btnBack">Back</string>
    <string name="btnDisplay">Display Data</string>
</resources>
