<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jayson.assignment6.domain.PreviewInputActivity"
    tools:showIn="@layout/activity_preview_input">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/txtViewNm"
        android:backgroundTint="@color/accent_material_light" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:id="@+id/txtViewSnm"
        android:layout_below="@+id/txtViewNm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:backgroundTint="@color/accent_material_light" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:id="@+id/txtViewLic"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent_material_light" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        android:id="@+id/btnSubmit"
        android:layout_above="@+id/btnBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
